--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,14 +7,14 @@ footer {
   display: none;
 }
 
-section.page-header {
+header.page-header {
   background-color: rgba(255,243,211,1);
   background-image: linear-gradient(160deg, rgba(42,98,128,1) 0%, rgba(52,153,205,1) 17%, rgba(255,243,211,1) 59%, rgba(255,178,96,1) 100%);
   color: black;
 }
 
 @media (min-width: 860px) {
-    section.page-header .project-name {
+    header.page-header .project-name {
 	background-image: url('https://nilearn.github.io/nilearn.github.io/_static/nilearn-logo.png');
 	background-repeat: no-repeat;
 	overflow: visible;
