--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -4,6 +4,10 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
 
+$nilearn-darkorange: #bf6200;
+$nilearn-blue: #1e6bb8;
+
+
 /*
 	Prologue by HTML5 UP
 	html5up.net | @ajlkn
@@ -60,7 +64,7 @@
 /* Basic */
 
 	body {
-		background: #fff;
+		background: #ffffff;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 19pt;
 		font-weight: 300;
@@ -83,7 +87,7 @@
 
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 300;
-		color: #666;
+		color: $nilearn-darkorange;
 		line-height: 1.5em;
 	}
 
@@ -119,7 +123,7 @@
 
 	strong, b {
 		font-weight: 300;
-		color: #666;
+		color: $nilearn-darkorange;
 	}
 
 	em, i {
@@ -128,14 +132,12 @@
 
 	a {
 		text-decoration: none;
-		color: inherit;
-		border-bottom: dotted 1px rgba(128, 128, 128, 0.5);
-		@include vendor('transition', ('color 0.35s ease-in-out', 'border-bottom-color 0.35s ease-in-out'));
+		color: $nilearn-blue;
 		outline: 0;
 
 		&:hover {
-			color: #E27689;
-			border-bottom-color: rgba(255, 255, 255, 0);
+			border-bottom: dotted 1px $nilearn-blue;
+			@include vendor('transition', ('color 0.35s ease-in-out', 'border-bottom-color 0.35s ease-in-out'));
 		}
 	}
 
@@ -193,7 +195,7 @@
 	dl {
 		dt {
 			font-weight: 300;
-			color: #666;
+			color: $nilearn-darkorange;
 		}
 		dd {
 			margin-left: 1em
@@ -455,7 +457,7 @@
 		margin-bottom: 40px;
 
 		header {
-			color: #666;
+			color: $nilearn-darkorange;
 			text-align: center;
 			background: #fff;
 			margin: 0;
