--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -6,7 +6,8 @@
 
 $nilearn-darkorange: #bf6200;
 $nilearn-blue: #1e6bb8;
-
+$nilearn-lightblue: #3499cd;
+$nilearn-lightorange: #fff3d3;
 
 /*
 	Prologue by HTML5 UP
@@ -615,7 +616,7 @@ $nilearn-blue: #1e6bb8;
 	#footer {
 		margin-left: 375px;
 		text-align: center;
-		background-color: #dce3e2;
+		background-color: $nilearn-lightblue;
 		padding: 3em 0 4em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
@@ -701,19 +702,19 @@ $nilearn-blue: #1e6bb8;
 			}
 
 			&.shade-one {
-				background-color: #81918E;
+				background-color: #fff;
 			}
 
 			&.shade-two {
-				background-color: #f5fafa;
+				background-color: $nilearn-lightorange;
 			}
 
 			&.shade-three {
-				background-color: #ecf1f1;
+				background-color: #fff;
 			}
 
 			&.shade-four {
-				background-color: #e8edec;
+				background-color: $nilearn-lightblue;
 			}
 		}
 	}
