--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -8,6 +8,8 @@ $nilearn-darkorange: #bf6200;
 $nilearn-blue: #1e6bb8;
 $nilearn-lightblue: #3499cd;
 $nilearn-lightorange: #fff3d3;
+$nilearn-bgorange: #fffaee;
+$nilearn-bgblue: e8f7ff;
 
 /*
 	Prologue by HTML5 UP
@@ -410,7 +412,6 @@ $nilearn-lightorange: #fff3d3;
 			text-align: left;
 			padding: 0.5em 1em 0.5em 1em;
 			color: #fff;
-			background: #222729 url('images/overlay.png');
 		}
 
 		thead {
@@ -661,7 +662,6 @@ $nilearn-lightorange: #fff3d3;
 			overflow: hidden;
 			padding: 4em 0;
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
-			background-image: url('images/overlay.png');
 
 			&.dark {
 				color: #ddd;
@@ -706,7 +706,7 @@ $nilearn-lightorange: #fff3d3;
 			}
 
 			&.shade-two {
-				background-color: $nilearn-lightorange;
+				background-color: $nilearn-bgorange;
 			}
 
 			&.shade-three {
@@ -714,7 +714,7 @@ $nilearn-lightorange: #fff3d3;
 			}
 
 			&.shade-four {
-				background-color: $nilearn-lightblue;
+				background-color: $nilearn-bgblue;
 			}
 		}
 	}
