--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -115,9 +115,14 @@ $nilearn-bgblue: #e8f7ff;
 
 	header {
 		margin: 0 0 2em 0;
+		color: black;
 
 		> p {
-			margin: 1em 0 0 0;
+			margin: .1em 0 0 0;
+		}
+
+		h2 {
+			color: black;
 		}
 	}
 
