--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -116,14 +116,17 @@ $nilearn-bgblue: #e8f7ff;
 	header {
 		margin: 0 0 2em 0;
 		color: black;
+		text-shadow: 0px 0px 8px #fff;
+		font-weight: 600;
 
 		> p {
-			margin: .1em 0 0 0;
+			margin: 0;
 		}
 
-		h2 {
+		h2, a {
 			color: black;
 		}
+
 	}
 
 	footer {
