--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -115,17 +115,9 @@ $nilearn-bgblue: #e8f7ff;
 
 	header {
 		margin: 0 0 2em 0;
-		color: black;
-		text-shadow: 0px 0px 8px #fff;
-		font-weight: 600;
 
 		> p {
-			margin: 0 0 1.5em 0;
-		}
-
-		h2, a {
-			color: black;
-			font-weight: 600;
+			margin: 1em 0 0 0;
 		}
 
 	}
@@ -697,7 +689,7 @@ $nilearn-bgblue: #e8f7ff;
 			}
 
 			&.cover {
-				padding: 4em 0;
+				padding: 2em 0 6em 0;
 				position: relative;
 				z-index: 0;
 				img.back {
@@ -1096,6 +1088,18 @@ $nilearn-bgblue: #e8f7ff;
 
 						header {
 							padding: 0 1em;
+							color: black;
+							text-shadow: 0px 0px 8px #fff;
+							font-weight: 600;
+
+							h2, a {
+								color: black;
+								font-weight: 600;
+							}
+
+							> p {
+							    margin: 0 0 1.5em 0;
+							}
 						}
 					}
 				}
