--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -665,20 +665,21 @@ $nilearn-bgblue: #e8f7ff;
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 
 			&.dark {
-				color: #ddd;
-				color: rgba(255, 255, 255, 0.75);
+				color: black;
+				text-shadow: 0px 0px 8px #fff;
+				font-weight: 600;
 
 				h2, h3, h4, h5, h6 {
 					color: inherit;
 				}
 
 				strong {
-					color: #fff;
+					color: black;
 					border-color: inherit;
 				}
 
 				a {
-					color: #fff;
+					color: black;
 					border-color: inherit;
 
 					&:hover {
