--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -71,7 +71,7 @@ $nilearn-bgblue: #e8f7ff;
 		background: #ffffff;
 		line-height: 1.75em;
 		font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-		font-size: 16px;
+		font-size: 16pt;
 		line-height: 1.5;
 		color: #888;
 
