--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -1109,6 +1109,8 @@ $nilearn-bgblue: #e8f7ff;
 		/* Footer */
 
 			#footer {
+				display: none;
+
 				.copyright {
 					li {
 						display: block;
