--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -616,6 +616,7 @@ $nilearn-bgblue: #e8f7ff;
 /* Footer */
 
 	#footer {
+		display: none;
 		margin-left: 375px;
 		text-align: center;
 		background-color: $nilearn-lightblue;
