tables on mobile

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -903,6 +903,12 @@ $nilearn-bgblue: #e8f7ff;
 				}
 			}
 
+		/* Tables */
+
+			table {
+			    font-size: 80%;
+			}
+
 		/* Header */
 
 			#header {
