--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -765,7 +765,7 @@ $nilearn-bgblue: #e8f7ff;
 
 				section {
 					&.cover {
-						padding: 5em 0;
+						padding: 2.5em 0 5em 0;
 					}
 				}
 			}
